# stlbench

./: .gitignore  Makefile  README.md  pyproject.toml
.githooks/: lint.sh
.github/workflows/: lint.yml  publish.yml
configs/: mars5_ultra.toml
examples/: README.md
examples/gandalf/main/: sword.stl
examples/gendalf/main/: figure.stl  staff.stl
stlbench/: __init__.py  __main__.py  bbox_fit.py  cli.py  config_load.py  orientation.py  plate_groups.py  profiling.py
stlbench/config/: __init__.py  defaults.py  enums.py  loader.py  sample_config.py  schema.py
stlbench/core/: __init__.py  fit.py  mesh_cleanup.py  mesh_repair.py  orientation.py  overhang.py
stlbench/domain/: part.py  plate.py  printer.py
stlbench/export/: __init__.py  plate.py  transform_log.py
stlbench/hollow/: __init__.py  meshlib_note.md  voxel_shell.py
stlbench/packing/: __init__.py  base.py  bitmap_pack.py  layout_orientation.py  polygon_footprint.py  polygon_pack.py  rectpack_plate.py  shelf.py
stlbench/pipeline/: __init__.py  common.py  executor.py  mesh_io.py  progress.py  resource_planner.py  run_autopack.py  run_fill.py  run_info.py  run_job.py  run_layout.py  run_orient.py  run_prepare.py  run_scale.py
stlbench/reporting/: progress.py  tables.py
stlbench/steps/: __init__.py  base.py  layout.py  orient.py  scale.py
stlbench/supports/: __init__.py  external.py
tests/: conftest.py  test_autopack.py  test_bbox_fit.py  test_bitmap_pack.py  test_config_load.py  test_domain.py  test_export_plate.py  test_fill.py  test_info.py  test_job_runner.py  test_layout_orientation.py  test_mesh_repair.py  test_mesh_scale.py  test_orientation.py  test_overhang.py  test_parallel_pipeline.py  test_plate_groups.py  test_polygon_pack.py  test_printable_orientation.py  test_profiling.py  test_progress.py  test_rectpack_plate.py  test_resource_planner.py  test_sample_config.py  test_transform_log.py
tests/assets/: cube.stl
