[project]
name = "stlbench"
version = "1.2.1"
description = "STL preparation toolkit for resin 3D printing: uniform scaling, bed packing, fill, autopack."
authors = [
    {name = "NikitaDmitryuk", email = "dmitryuk.nikita@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["stl", "3d-printing", "resin", "scaling", "packing", "sla", "dlp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.23",
    "pydantic>=2.0,<3",
    "rectpack>=0.2.2",
    "rich>=13.0",
    "scipy>=1.17",
    "trimesh>=3.21",
    "typer>=0.9",
    "lxml>=4.9",
    "shapely>=2.0",
    "networkx>=2.0",
    "pycollada (>=0.9.3,<0.10.0)",
    "pymeshlab (>=2025.7.post1,<2026.0)",
    "pyclipper (>=1.4.0,<2.0.0)",
]

[project.urls]
Homepage = "https://github.com/NikitaDmitryuk/stlbench"
Repository = "https://github.com/NikitaDmitryuk/stlbench"
"Bug Tracker" = "https://github.com/NikitaDmitryuk/stlbench/issues"

[project.scripts]
stlbench = "stlbench.cli:main"

[tool.poetry]
packages = [{ include = "stlbench" }]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "isort>=5.12",
    "mypy>=1.5",
    "ruff>=0.1",
    "black>=23.0",
    "twine>=5.0",
    "build>=1.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["stlbench", "tests"]
known_first_party = ["stlbench"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["stlbench", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
packages = ["stlbench"]
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
disallow_untyped_defs = false
